# challenges

./: .gitignore  README.md
abakus-readme/: fib_tables.txt  fondianias-forferdelige-foreldre.py  parie-pils-og-paradise.py  snorres-sammensatte-siffer.py  spesielle-sykliske-siffer.py
advent-of-code/2023/: README.md  pyproject.toml
advent-of-code/2023/day01/: trebuchet.py
advent-of-code/2023/day02/: cube_conundrum.py
advent-of-code/2023/day03/: gear_ratios.py
advent-of-code/2023/day03/tests/: test_gear_ratios.py
advent-of-code/2023/day04/: scratchcards.py
advent-of-code/2023/day05/: seed_fertilizer.py
advent-of-code/2023/day05/tests/: test_seed_fertilizer.py
advent-of-code/2023/day06/: boat_race.py
advent-of-code/2023/day07/: camel_cards.py  haunted_wasteland.py
advent-of-code/2023/day08/: haunted_wasteland.py
advent-of-code/2023/day09/: oasis.py
advent-of-code/2023/day11/: cosmic_expansion.py
advent-of-code/2023/day12/: hot_springs.py
advent-of-code/2023/day13/: point_of_incidence.py
advent-of-code/2023/day14/: reflector_dish.py
advent-of-code/2023/day15/: lens_library.py
advent-of-code/2023/day16/: floor_will_be_lava.py
advent-of-code/2023/day17/: clumsy_crucible.py
advent-of-code/2023/day18/: lavaduct_lagoon.py
advent-of-code/2023/day19/: aplenty.py
advent-of-code/2023/day21/: step_counter.py
hackerrank/: diagonal-difference.py  extra-long-factorials.py
it-olympics-2013/Gjetteleken/: main.cpp  testinput.txt
it-olympics-2013/Hello World/: main.cpp
kattis/2048/: README.md  (+1 more)
project-euler/: Fibonacci.py  multiples.py
(+122 files in other folders)
